--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <Header>Dazing</Header>
+    <head>
+        <title>Debangan Samanta</title>
+    </head>
     <body>
+        <Header>Dazinga</Header>
         <h1>Hello Daz</h1>
         <p>I'm hosted with gitHub Pages.</p>
     </body>
