--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <Header>Dazinga</Header>
         <h1>Hello Daz</h1>
-        <p>I'm hosted with gitHub Pages.</p>
+        <p>My first website.</p>
     </body>
 </html>
