--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <body>
-
+    <nav class="w3-bar w3-black">
+        <a href="#home" class="w3-button w3-bar-item">Home</a>
+        <a href="#band" class="w3-button w3-bar-item">Projects</a>
+        <a href="#blog" class="w3-button w3-bar-item">Blog</a>
+        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+    </nav>
+    <section>
+        <img class="mySlides" src="jade-ingsley-landscapeyscap.jpg"
+        style="width:100%">
+        <img class="mySlides" src="Resr4vZ.png"
+        style="width:100%">
+        <img class="mySlides" src="firewatch_2016_game-1920x1080.png"
+        style="width:100%">
+    </section>
 
 
 </body>
