--- a/index.html
+++ b/index.html
@@ -16,9 +16,26 @@
         style="width:100%">
         <img class="mySlides" src="Resr4vZ.png"
         style="width:100%">
-        <img class="mySlides" src="firewatch_2016_game-1920x1080.png"
+        <img class="mySlides" src="firewatch_2016_game-1920x1080.jpg"
         style="width:100%">
     </section>
+    <script>
+        // Automatic Slideshow - change image every 3 seconds
+        var myIndex = 0;
+        carousel();
+        
+        function carousel() {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          for (i = 0; i < x.length; i++) {
+             x[i].style.display = "none";
+          }
+          myIndex++;
+          if (myIndex > x.length) {myIndex = 1}
+          x[myIndex-1].style.display = "block";
+          setTimeout(carousel, 3000);
+        }
+    </script>
 
 
 </body>
