--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="#blog" class="w3-button w3-bar-item">Blog</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
+    <h1 class="w3-jumbo w3-animate-top">Debangan Samanta</h1>
     <section>
         <img class="mySlides" src="jade-ingsley-landscapeyscap.jpg"
         style="width:100%">
