--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <a href="#blog" class="w3-button w3-bar-item">Blog</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
-    <h1 class="w3-jumbo w3-animate-top">Debangan Samanta</h1>
+    <div class="w3-display-middle">
+        <h1 class="w3-jumbo w3-animate-top">Debangan Samanta</h1>
+        <hr class="w3-border-grey" style="margin:auto;width:40%">
+    </div>
     <section>
         <img class="mySlides" src="jade-ingsley-landscapeyscap.jpg"
         style="width:100%">
