--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-top">Debangan Samanta</h1>
+        <h1 class="w3-jumbo w3-animate-zoom">Debangan Samanta</h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
