--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
-        <img class="mySlides" src="road-between-trees-3408552jpg"
+        <img class="mySlides" src="road-between-trees-3408552.jpg"
         style="width:100%">
-        
     </section>
    
 
