--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <body>
-    <nav class="w3-bar w3-black">
-        <a href="#home" class="w3-button w3-bar-item">Home</a>
-        <a href="#band" class="w3-button w3-bar-item">Projects</a>
-        <a href="#blog" class="w3-button w3-bar-item">Blog</a>
-        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
-    </nav>
+    
+    <header>
+        <nav class="w3-bar w3-black">
+            <a href="#home" class="w3-button w3-bar-item">Home</a>
+            <a href="#band" class="w3-button w3-bar-item">Projects</a>
+            <a href="#blog" class="w3-button w3-bar-item">Blog</a>
+            <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+        </nav>
+    </header>
+    
     <div class="w3-display-middle">
         <h1 class="w3-jumbo w3-animate-zoom">Debangan Samanta</h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
