--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <header>
         <nav class="w3-bar w3-black">
-            <a href="#home" class="w3-button w3-bar-item">Home</a>
+            <a href="#home" class="w3-button w3-bar-item">Hom</a>
             <a href="#band" class="w3-button w3-bar-item">Projects</a>
             <a href="#blog" class="w3-button w3-bar-item">Blog</a>
             <a href="#contact" class="w3-button w3-bar-item">Contact</a>
