--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <header>
         <nav class="w3-bar w3-black">
-            <a href="#home" class="w3-button w3-bar-item">Hom</a>
+            <a href="#home" class="w3-button w3-bar-item">Home</a>
             <a href="#band" class="w3-button w3-bar-item">Projects</a>
             <a href="#blog" class="w3-button w3-bar-item">Blog</a>
             <a href="#contact" class="w3-button w3-bar-item">Contact</a>
@@ -16,7 +16,7 @@
     </header>
     
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-zoom">Debangan Samanta</h1>
+        <h1 class="w3-jumbo w3-animate-zoom" style:"color:white;text-align:center;border:2px solid White"><b>Debangan Samanta</b></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
