--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-zoom" style:"color:white;text-align:center;border:2px solid White"><b>Debangan Samanta</b></h1>
+        <h1 class="w3-jumbo w3-animate-zoom" style:"color:white;text-align:center;border:5px white"><b>Debangan Samanta</b></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
