--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<body>
-    
+<style>
+    p {
+      border: 5px solid whitesmoke;
+    }
+    </style>
+<body>    
     <header>
         <nav class="w3-bar w3-black">
             <a href="#home" class="w3-button w3-bar-item">Home</a>
@@ -16,7 +20,7 @@
     </header>
     
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-zoom" style:"color:white;text-align:center;border:5px white"><b>Debangan Samanta</b></h1>
+        <h1 class="w3-jumbo w3-animate-zoom" style:"color:white;text-align:center;"><b><p>Debangan Samanta</p></b></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
