--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <style>
     p {
-       
+      color: whitesmoke 
       border: 10px solid whitesmoke;
     }
     </style>
