--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<style>
-    p {
-      color: whitesmoke 
-      border: 10px solid whitesmoke;
-    }
-    </style>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">    
 <body>    
     <header>
         <nav class="w3-bar w3-black">
-            <a href="#home" class="w3-button w3-bar-item">Home</a>
-            <a href="#band" class="w3-button w3-bar-item">Projects</a>
-            <a href="#blog" class="w3-button w3-bar-item">Blog</a>
+            <a href="index.html" class="w3-button w3-bar-item">Home</a>
+            <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
+            <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
             <a href="#contact" class="w3-button w3-bar-item">Contact</a>
         </nav>
     </header>
