--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-zoom"><b><p>Debangan Samanta</p></b></h1>
+        <h1 class="w3-jumbo w3-animate-zoom"><b><p>Hi, Debangan here!</p></b></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
     <section>
