--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </style>  
 <body>    
     <header>
-        <nav class="w3-bar w3-black">
+        <nav class="w3-bar w3-black" item-width="40px">
             <a href="index.html" class="w3-button w3-bar-item">Home</a>
             <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
             <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
