--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </style>  
 <body>    
     <header>
-        <nav class="w3-bar w3-black" item-width="40px">
+        <nav class="w3-bar w3-blue" item-width="40px">
             <a href="index.html" class="w3-button w3-bar-item">Home</a>
             <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
             <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
@@ -46,15 +46,11 @@
     </header>
     
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-zoom"><b><p>Hi, Debangan here!</p></b></h1>
+        <h1 class="w3-jumbo w3-animate-zoom"><i>Hi there! </i></h1>
+        <h1 class="w3-jumbo w3-animate-left"><b>I'm Debangan Samanta</b></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
     </div>
-    <section>
-        <img class="mySlides" src="road-between-trees-3408552.jpg"
-        style="width:100%">
-    </section>
     
-    <div id="googleMap" style="width:100%;height:400px;"></div>
 
     <script>
     function myMap() {
