--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">  
 <style>
+    h1{font-size: 64px;}
     .container {
       display: inline-block;
       cursor: pointer;
