--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
     
-    <div class="w3-display-middle w3-panel w3-border">
+    <div class="w3-display-middle w3-panel w3-border w3-leftbar w3-blue">
         <h1 class="w3-jumbo w3-animate-zoom"><i>Hi there! </i></h1>
         <h1 class="w3-jumbo w3-animate-left"><b>I'm Debangan Samanta</b></h1>
     </div>
