--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </style>  
 <body>    
     <header>
-        <nav class="w3-bar w3-blue" item-width="400px">
+        <nav class="w3-display-middle w3-bar w3-blue">
             <a href="index.html" class="w3-button w3-bar-item">Home</a>
             <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
             <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
