--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>    
     <header>
         <nav class="w3-bar w3-blue">
-            <div class="w3-display-middle">
+            <div>
                     <a href="index.html" class="w3-button w3-bar-item">Home</a>
                     <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
                     <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
