--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <a href="index.html" class="w3-button w3-bar-item">Home</a>
                     <a href="Projects.html" class="w3-button w3-bar-item">Projects</a>
                     <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
+                    <a href="copied.html" class="w3-button w3-bar-item">New Site</a>
                     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-blue">Contact</button>
                           
                     <div id="id01" class="w3-modal">
