--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Bangers|Merriweather|Montserrat|Raleway|Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css"/>
-    <title>Landing Page</title>
+    <title>Debangan</title>
 </head>
 <body>
     <header>
-        <div class="">
-             
-        </div>
+        <div>
+            Hi
+        </div>      
     </header>
     
 </body>
