--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Bangers|Merriweather|Montserrat|Raleway|Ubuntu&display=swap" rel="stylesheet">
-    <title>Debangan</title>
+    <title>I'm Debangan</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <div>
-            Hi
-        </div>      
-    </header>
-    
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
+        <style type="text/css">
+.st0{fill:none;}
+.st1{fill:none;stroke:#FFFFFF;stroke-width:0.9;stroke-miterlimit:10;}
+.st2{font-family:'Castellar';}
+.st3{font-size:120px;}
+        </style>
+        <rect x="56" y="51" class="st0" width="1241" height="596"/>
+        <text transform="matrix(1 0 0 1 350.5137 136.7998)"><tspan x="0" y="0" class="st1 st2 st3">Hi there,</tspan><tspan x="-177.57" y="144" class="st1 st2 st3">I’m Debangan</tspan></text>
+        <rect x="1072.7" y="544.4" class="st0" width="0" height="10.64"/>
+    id ="logo"
+    </svg>    
+    <script src="./app.js"></script>
 </body>
 </html>
